packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_symbol_search_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
expression: value
---
{
  "repo_id": "symbol-sample",
  "symbol_hits": [
    {
      "audit_status": "unreviewed",
      "hierarchical_uri": "repo://symbol-sample/symbol/repo:symbol-sample:symbol:SymbolPkg.solve",
      "hierarchy": [
        "src",
        "SymbolPkg.jl"
      ],
      "implicit_backlink_items": [
        {
          "id": "repo:symbol-sample:doc:src/SymbolPkg.jl#symbol:solve",
          "kind": "documents",
          "path": "src/SymbolPkg.jl#symbol:solve",
          "title": "solve"
        }
      ],
      "implicit_backlinks": [
        "repo:symbol-sample:doc:src/SymbolPkg.jl#symbol:solve"
      ],
      "projection_page_ids": [
        "repo:symbol-sample:projection:reference:doc:repo:symbol-sample:doc:src/SymbolPkg.jl#symbol:solve",
        "repo:symbol-sample:projection:reference:symbol:repo:symbol-sample:symbol:SymbolPkg.solve"
      ],
      "rank": 1,
      "saliency_score": 1.0,
      "score": 1.0,
      "symbol": {
        "audit_status": "unreviewed",
        "kind": "function",
        "module_id": "repo:symbol-sample:module:SymbolPkg",
        "name": "solve",
        "path": "src/SymbolPkg.jl",
        "qualified_name": "SymbolPkg.solve",
        "repo_id": "symbol-sample",
        "signature": "solve(problem::Problem)",
        "symbol_id": "repo:symbol-sample:symbol:SymbolPkg.solve"
      },
      "verification_state": "unverified"
    }
  ],
  "symbols": [
    {
      "audit_status": "unreviewed",
      "kind": "function",
      "module_id": "repo:symbol-sample:module:SymbolPkg",
      "name": "solve",
      "path": "src/SymbolPkg.jl",
      "qualified_name": "SymbolPkg.solve",
      "repo_id": "symbol-sample",
      "signature": "solve(problem::Problem)",
      "symbol_id": "repo:symbol-sample:symbol:SymbolPkg.solve"
    }
  ]
}
