packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_sync_managed_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 34
expression: value
---
{
  "checked_at": "[checked-at]",
  "checkout_path": "[checkout-path]",
  "checkout_state": "created",
  "drift_state": "in_sync",
  "health_state": "healthy",
  "last_fetched_at": "[last-fetched-at]",
  "mirror_path": "[mirror-path]",
  "mirror_revision": "[revision]",
  "mirror_state": "created",
  "mode": "ensure",
  "refresh": "fetch",
  "repo_id": "managed-sync",
  "revision": "[revision]",
  "source_kind": "managed_remote",
  "staleness_state": "fresh",
  "status_summary": {
    "attention_required": false,
    "drift_state": "in_sync",
    "freshness": {
      "checked_at": "[checked-at]",
      "last_fetched_at": "[last-fetched-at]",
      "staleness_state": "fresh"
    },
    "health_state": "healthy",
    "lifecycle": {
      "checkout_ready": true,
      "checkout_state": "created",
      "mirror_ready": true,
      "mirror_state": "created",
      "source_kind": "managed_remote"
    },
    "revisions": {
      "aligned_with_mirror": true,
      "checkout_revision": "[revision]",
      "mirror_revision": "[revision]",
      "tracking_revision": "[revision]"
    }
  },
  "tracking_revision": "[revision]",
  "upstream_url": "[upstream-url]"
}
