packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_sync_status_ahead_managed_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/support/../../support/repo_intelligence.rs
assertion_line: 34
expression: value
---
{
  "checked_at": "[checked-at]",
  "checkout_path": "[checkout-path]",
  "checkout_state": "observed",
  "drift_state": "ahead",
  "health_state": "has_local_commits",
  "last_fetched_at": "[last-fetched-at]",
  "mirror_path": "[mirror-path]",
  "mirror_revision": "[revision]",
  "mirror_state": "observed",
  "mode": "status",
  "refresh": "fetch",
  "repo_id": "managed-drift",
  "revision": "[revision]",
  "source_kind": "managed_remote",
  "staleness_state": "fresh",
  "status_summary": {
    "attention_required": true,
    "drift_state": "ahead",
    "freshness": {
      "checked_at": "[checked-at]",
      "last_fetched_at": "[last-fetched-at]",
      "staleness_state": "fresh"
    },
    "health_state": "has_local_commits",
    "lifecycle": {
      "checkout_ready": true,
      "checkout_state": "observed",
      "mirror_ready": true,
      "mirror_state": "observed",
      "source_kind": "managed_remote"
    },
    "revisions": {
      "aligned_with_mirror": false,
      "checkout_revision": "[revision]",
      "mirror_revision": "[revision]",
      "tracking_revision": "[revision]"
    }
  },
  "tracking_revision": "[revision]",
  "upstream_url": "[upstream-url]"
}
